--- a/views/board.html
+++ b/views/board.html
@@ -32,29 +32,32 @@
             crossorigin="anonymous"></script>
     <script>
       $(function() {
-        var currentBoard = window.location.pathname.slice(3,-1);
-        var url = "/api/threads/"+currentBoard;
-        $('#boardTitle').text('Welcome to '+window.location.pathname)
+        console.log("SCRIPT LOADED");
+        const currentBoard = window.location.pathname.slice(3,-1);
+        const url = "/api/threads/"+currentBoard;
+        $('#boardTitle').text('Welcome to '+window.location.pathname);
         $.ajax({
           type: "GET",
           url: url,
           success: function(data)
           {
-            var boardThreads= [];
+            console.log("DATA RECEIVED");
+            console.log(`DATA: ${data}`);
+            let boardThreads= [];
             //
             // THIS ARRAY SET UP IS FOR CODE READABILITIES AND TESTING!
             // THIS IS NOT WHAT IT WOULD LOOK LIKE TO GO LIVE
             //
             data.forEach(function(ele) {
-              console.log(ele);//can I use typeScript please?!
-              var thread = ['<div class="thread">'];
+              console.log(ele);//can I use typeScript please?! ---> What is this comment? -JL
+              let thread = ['<div class="thread">'];
               thread.push('<div class="main">')
               thread.push('<p class="id">id: '+ele._id+' ('+ele.created_on+')</p>');
               thread.push('<form id="reportThread"><input type="hidden" name="report_id" value="'+ele._id+'"><input type="submit" value="Report"></form>');
               thread.push('<form id="deleteThread"><input type="hidden" value="'+ele._id+'" name="thread_id" required=""><input type="text" placeholder="password" name="delete_password" required=""><input type="submit" value="Delete"></form>');
               thread.push('<h3>'+ele.text+'</h3>');
               thread.push('</div><div class="replies">');
-              var hiddenCount = ele.replycount - 3;
+              let hiddenCount = ele.replycount - 3;
               if (hiddenCount < 1) { hiddenCount = 0 };
               thread.push('<h5>'+ele.replycount+' replies total ('+hiddenCount+' hidden)- <a href="'+window.location.pathname+ele._id+'">See the full thread here</a>.</h5>');
               ele.replies.forEach(function(rep) {
@@ -82,7 +85,7 @@
         });
         
         $('#boardDisplay').on('submit','#reportThread', function(e) {
-          var url = "/api/threads/"+currentBoard;
+          const url = "/api/threads/"+currentBoard;
           $.ajax({
             type: "PUT",
             url: url,
@@ -92,7 +95,7 @@
           e.preventDefault();
         });
         $('#boardDisplay').on('submit','#reportReply', function(e) {
-          var url = "/api/replies/"+currentBoard;
+          const url = "/api/replies/"+currentBoard;
           $.ajax({
             type: "PUT",
             url: url,
@@ -102,7 +105,7 @@
           e.preventDefault();
         });
         $('#boardDisplay').on('submit','#deleteThread', function(e) {
-          var url = "/api/threads/"+currentBoard;
+          const url = "/api/threads/"+currentBoard;
           $.ajax({
             type: "DELETE",
             url: url,
@@ -112,7 +115,7 @@
           e.preventDefault();
         });        
         $('#boardDisplay').on('submit','#deleteReply', function(e) {
-          var url = "/api/replies/"+currentBoard;
+          const url = "/api/replies/"+currentBoard;
           $.ajax({
             type: "DELETE",
             url: url,
@@ -122,6 +125,6 @@
           e.preventDefault();
         });              
       });
-   </script>
+    </script>
   </body>
 </html>
