--- a/views/board.html
+++ b/views/board.html
@@ -32,7 +32,6 @@
             crossorigin="anonymous"></script>
     <script>
       $(function() {
-        console.log("SCRIPT LOADED");
         const currentBoard = window.location.pathname.slice(3,-1);
         const url = "/api/threads/"+currentBoard;
         $('#boardTitle').text('Welcome to '+window.location.pathname);
@@ -41,15 +40,13 @@
           url: url,
           success: function(data)
           {
-            console.log("DATA RECEIVED");
-            console.log(`DATA: ${data}`);
             let boardThreads= [];
             //
             // THIS ARRAY SET UP IS FOR CODE READABILITIES AND TESTING!
             // THIS IS NOT WHAT IT WOULD LOOK LIKE TO GO LIVE
             //
             data.forEach(function(ele) {
-              console.log(ele);//can I use typeScript please?! ---> What is this comment? -JL
+              //console.log(ele);//can I use typeScript please?! ---> What is this comment? -JL
               let thread = ['<div class="thread">'];
               thread.push('<div class="main">')
               thread.push('<p class="id">id: '+ele._id+' ('+ele.created_on+')</p>');
