--- a/views/thread.html
+++ b/views/thread.html
@@ -24,10 +24,10 @@
             crossorigin="anonymous"></script>
     <script>
       $(function() {
-        var currentURL = window.location.pathname.slice(3);
+        let currentURL = window.location.pathname.slice(3);
         currentURL = currentURL.split('/');
         
-        var url = "/api/replies/"+currentURL[0];
+        const url = "/api/replies/"+currentURL[0];
         $('#threadTitle').text(window.location.pathname);
         $.ajax({
           type: "GET",
@@ -35,13 +35,13 @@
           data:{thread_id: currentURL[1]},
           success: function(ele)
           {
-            var boardThreads= [];
+            let boardThreads= [];
             //
             // THIS ARRAY SET UP IS FOR CODE READABILITIES AND TESTING!
             // THIS IS NOT WHAT IT WOULD LOOK LIKE TO GO LIVE
             //
-              console.log(ele);//can I use typeScript please?!
-              var thread = ['<div class="thread">'];
+              //console.log(ele);//can I use typeScript please?!
+              let thread = ['<div class="thread">'];
               thread.push('<div class="main">')
               thread.push('<p class="id">id: '+ele._id+' ('+ele.created_on+')</p>');
               thread.push('<form id="reportThread"><input type="hidden" name="report_id" value="'+ele._id+'"><input type="submit" value="Report"></form>');
@@ -73,7 +73,7 @@
         
         
         $('#boardDisplay').on('submit','#reportThread', function(e) {
-          var url = "/api/threads/"+currentURL[0];
+          const url = "/api/threads/"+currentURL[0];
           $.ajax({
             type: "PUT",
             url: url,
@@ -83,7 +83,7 @@
           e.preventDefault();
         });
         $('#boardDisplay').on('submit','#reportReply', function(e) {
-          var url = "/api/replies/"+currentURL[0];
+          const url = "/api/replies/"+currentURL[0];
           $.ajax({
             type: "PUT",
             url: url,
@@ -93,7 +93,7 @@
           e.preventDefault();
         });
         $('#boardDisplay').on('submit','#deleteThread', function(e) {
-          var url = "/api/threads/"+currentURL[0];
+          const url = "/api/threads/"+currentURL[0];
           $.ajax({
             type: "DELETE",
             url: url,
@@ -103,7 +103,7 @@
           e.preventDefault();
         });        
         $('#boardDisplay').on('submit','#deleteReply', function(e) {
-          var url = "/api/replies/"+currentURL[0];
+          const url = "/api/replies/"+currentURL[0];
           $.ajax({
             type: "DELETE",
             url: url,
